fixed the kg position( it was too much to the right)

--- a/public/style.css
+++ b/public/style.css
@@ -451,7 +451,13 @@
     border-radius: 30px;
     padding: 5px 10px;
     box-shadow: 0 2px 10px rgba(0,0,0,0.1);
+    width:245px;
+    gap:10px;
+   
 }
+
+
+
 
 .quantity-btn {
     width: 32px;
@@ -466,6 +472,7 @@
     align-items: center;
     justify-content: center;
     transition: all 0.2s;
+    margin-left: 15px;
 }
 
 .quantity-btn:hover {
@@ -565,8 +572,8 @@
 }
 
 .quantity-unit {
-    position: absolute;
-    right: 40px;
+    
+    right: 45px;
     font-size: 12px;
     color: #666;
     pointer-events: none;
